# BetterDraftLOL

./: .gitignore  api.py  audit_pro_coverage.py  bot_speech_builder.py  build_duo_dataset.py  build_meta_tierlist.py  build_training_dataset.py  champion_profile_stats.py  chatbot_rules.py  collect_soloq.py  composition_archetype.py  debug_meta_scoring.py  diagnostic_archetype_weight.py  diagnostic_bot_diversity.py  draft_bot.py  export_checkpoint.py  justification_builder.py  predict_draft.py  pro_force.py  pyproject.toml  requirements.txt  suggest_draft.py  test_bot_speech_builder.py  test_champion_profile_stats.py  test_chatbot_rules.py  test_composition_archetype.py  test_draft_bot.py  test_duo_dataset.py  test_meta_tierlist.py  test_predict_reload.py  test_pro_mode.py  test_suggest_draft.py  test_suggestion_filters.py  test_team_synergy.py  train_synergy_model.py  vercel.json
data/: bot_lane_matchup.csv  duo_bot_lane.csv  duo_jungle_support.csv  jungle_support_matchup.csv  meta_tierlist.csv  meta_tierlist_report.md  training_dataset.csv  unmapped_champions.txt
data/solo_queue/: checkpoint_euw.json  soloq_winrates_euw_16.13.csv  soloq_winrates_euw_latest.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: champion-positions.json
frontend/src/: App.css  App.mobile-layout.test.ts  App.tsx  ChampionGrid.test.tsx  useDraftState.test.ts
frontend/src/components/: AnalysisSection.tsx  BanSlot.tsx  BotVisualNovel.tsx  ChampionGrid.tsx  ChampionIcon.tsx  ChampionSplashSlot.tsx  (+15 more)
model/: features_order.json  synergy_model.json
(+27 files in other folders)
