[project]
name = "better-draft-lol"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[tool.vercel]
entrypoint = "api:app"
